<resources>
    <string name="app_name">Run Happy</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_cadastrese">"Cadastre-se"</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="login">Login</string>
    <string name="pausar">Pausar</string>
    <string name="title_activity_tela_inicial">TelaInicialActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_correr">Correr</string>
    <string name="menu_historico">Histórico</string>
    <string name="menu_sair">Sair</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">506782173445913</string>
    <string name="fb_login_protocol_scheme">fb506782173445913</string>
    <string name="ir_para_inicio">Ir para o início</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entrar">Entrar</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
</resources>
