<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_correr">

    <fragment
        android:id="@+id/nav_correr"
        android:name="com.example.runhappy.ui.home.HomeFragment"
        android:label="@string/menu_correr"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_correr_to_nav_gallery"
            app:destination="@id/nav_historico" />
        <action
            android:id="@+id/action_nav_correr_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_nav_correr_to_nav_tools2"
            app:destination="@id/nav_tools" />
    </fragment>

    <fragment
        android:id="@+id/nav_historico"
        android:name="com.example.runhappy.ui.gallery.GalleryFragment"
        android:label="@string/menu_historico"
        tools:layout="@layout/activity_historico" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.runhappy.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.runhappy.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.runhappy.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.runhappy.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>