<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_correr"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/menu_correr" />
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_feed"
            android:title="Feed" />
        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/ic_buscar"
            android:title="Buscar pessoas" />
        <item
            android:id="@+id/nav_historico"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_historico" />
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_sair" />

    </group>


</menu>
